--- a/lab7/task3/style.css
+++ b/lab7/task3/style.css
@@ -142,7 +142,7 @@ button{
     
     height: 40px;
     text-transform: uppercase;
-    margin: 30px 5px 5px 5px;
+    margin: 25px 5px 5px 5px;
 
     float:right;
     font-weight: bold;
